--- a/style.css
+++ b/style.css
@@ -5,27 +5,35 @@
 @import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Sriracha&display=swap');
 
 body {
-    margin: 0px;
-    margin-top: -21px;
-    padding: 0px;
     background-color: aqua;
+    margin: 0px;
 }
 
 header {
-    padding: 15px 10px 3px;
-    text-align: center;
-    margin-bottom: 0px;
     width: 100%;
+    padding: 50px 0px 50px 0px;
     color: white;
+    text-align: center;
     background-color: black;
     box-shadow: 1px 1px 3px black;
-    font-family: sans-serif
 }
 
-header > h1 {
+header > h1 { 
+    font-size: 7vw;
     font-family: passion one;
     font-weight: bolder;
-    font-size: 60px
+    text-transform: uppercase;
+    margin: 0px;
+}
+
+.inicial {
+    font-size: 10vw;
+}
+
+header > p {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin-top: 0px;
+    margin-bottom: 0px;
 }
 
 header > p > a {
@@ -35,21 +43,54 @@ header > p > a {
     font-weight: 600;
 }
 
-#p1 {
-    background-color: white;
-    width: 100%;
-    padding: 50px;
+header > p > a:hover {
+    text-decoration: underline;
 }
 
-div {
-    width: 250px;
+.fundo {
+    display: flex;
+    flex-direction: column;
+    gap: 4vw;
+    background-color: white;
+    box-shadow: 1px 1px 5px black;
+    padding: 10vw 0px 10vw 30px;
+}
+
+.imagem {
+    box-shadow: inset 1px 3px 12px 0px black;
+    padding: 5vw 0px 5vw 30px;
 }
 
 .paragrafo{
     font-family: sriracha;
-    font-size: larger;
-    border: black solid 1px;
+    margin: 0px;
+    width: 60vw;
+    line-height: 2em;
+    font-size: 3.5vw;
+    font-weight: lighter;
 }
+
+.paragrafo2{
+    font-family: sriracha;
+    width: 42vw;
+    padding: 4px;
+    margin: 0px;
+    line-height: 2em;
+    font-size: 3.5vw;
+    font-weight: lighter;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.678);
+}
+
+#img1 {
+    background: rgb(255, 255, 255) url(imagens/background001.jpg) center right / cover no-repeat fixed;
+}
+
+#img2 {
+    background: black url(imagens/background002.jpg) center center / cover no-repeat fixed;
+}
+
+
 
 
 
